# data-camp-2025

./: LICENSE  README.md  pyproject.toml
data/: 1_churn_rates_dummy_data.csv
notebooks/: 0_hello.py  1_churn_rates.py
